2008-03-24  Ulrich Drepper  <drepper@redhat.com>

	* po/vi.po: New Vietnamese translation.

	* sysdeps/unix/sysv/linux/adjtime.c: Correctly use
	ADJ_OFFSET_SS_READ.

	* sysdeps/unix/sysv/linux/bits/sched.h: Add new CLONE_* flags,
	remove CLONE_STOPPED.

2008-02-10  Jim Meyering  <meyering@redhat.com>

	Remove useless "if" before "free":
	* elf/ldconfig.c (parse_conf_include): Likewise.
	* gmon/gmon.c (weak_alias): Likewise.
	* iconv/gconv_conf.c (__gconv_get_path): Likewise.
	* inet/rcmd.c (__validuser2_sa): Likewise.
	* intl/bindtextdom.c (set_binding_values): Likewise.
	* intl/loadmsgcat.c (_nl_load_domain, _nl_unload_domain): Likewise.
	* libio/genops.c (save_for_backup): Likewise.
	* libio/wgenops.c (save_for_wbackup): Likewise.
	* locale/programs/ld-collate.c (collate_read): Likewise.
	* locale/programs/linereader.c (get_string): Likewise.
	* nis/nss_compat/compat-pwd.c (give_pwd_free): Likewise.
	* nis/nss_compat/compat-spwd.c (give_spwd_free): Likewise.
	* resolv/res_debug.c (do_section): Likewise.
	* sunrpc/xdr_sizeof.c (x_inline, xdr_sizeof): Likewise.
	* sysdeps/mach/hurd/if_index.c (libc_hidden_def): Likewise.
	* sysdeps/posix/sprofil.c (__sprofil): Likewise.
	* time/lc-time-cleanup.c (_nl_cleanup_time): Likewise.
	* time/tzset.c (tzset_internal): Likewise.

2008-03-18  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/dl-sysdep.h: Use __ASSEMBLER__ instead
	of ASSEMBLER.

2008-03-11  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5903]
	* iconv/iconv_charmap.c (charmap_conversion): Pass name of output file
	not stream for output file.  Open output file here.
	* iconv/iconv_prog.c (process_lock): Take pointer to output stream
	and output file name.
	(process_fd): Likewise.
	(process_file): Likewise.
	(main): Adjust callers of changed functions.
	* iconv/iconv_prog.h: Adjust prototype.

2008-03-09  Andreas Jaeger  <aj@suse.de>

	[BZ #5753]
	* sysdeps/ia64/ieee754.h: Use protected namespace
	__BIG_ENDIAN/__LITTLE_ENDIAN.